--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -67,9 +67,9 @@
             transition: color 0.3s ease-in-out;
             cursor: pointer;
             display: inline-block;
-            padding: 8px 12px;
-            padding-left: 12%;
-            padding-right: 12%;
+            padding: 8px 4px;
+            padding-left: 6%;
+            padding-right: 6%;
             border-radius: 4px;
             border: 1px solid #3498db;
             text-align: center;
@@ -142,7 +142,7 @@
             padding: 8px 12px;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(255, 165, 0, 0.5); /* Тень оранжевого цвета */
-            animation: pulse2 30s infinite; /* Анимация мерцания */
+            animation: pulse2 10s infinite; /* Анимация мерцания */
         }
 
         .ending-soon:hover {
@@ -154,22 +154,70 @@
             padding: 8px 12px;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); /* Тень красного цвета */
-            animation: pulse 4s infinite; /* Анимация мерцания */
+            animation: pulse 10s infinite; /* Анимация мерцания */
         }
 
 
         @keyframes pulse2 {
-            0% { background-color: orange; }
-            50% { background-color: rgba(229, 151, 7, 0.7); }
-            100% { background-color: orange; }
+            0% { background-color: rgba(255, 165, 0, 0.7); }
+            50% { background-color: rgba(229, 151, 7, 0.5); }
+            100% { background-color: rgba(255, 165, 0, 0.7); }
         }
         @keyframes pulse {
-            0% { background-color: red; }
-            50% { background-color: #930404; }
-            100% { background-color: red; }
+            0% { background-color: rgba(248, 42, 42, 0.7); }
+            50% { background-color: rgba(147, 4, 4, 0.4); }
+            0% { background-color: rgba(248, 42, 42, 0.7); }
         }
         .overdue:hover {
             background-color: darkred; /* Изменение цвета при наведении */
+        }
+        .tdStat {
+            width: 12%;
+        }
+        .tdAdd {
+            width: 13%;
+        }
+        .tdTit {
+            width: 15%;
+        }
+        .tdDesc {
+            width: 23%;
+        }
+        .tdDead {
+            width: 10%;
+        }
+        .tdPrior {
+            width: 9%;
+        }
+        .tdOper {
+            width: 18%;
+        }
+
+        .ending-soon-subtask {
+            color: #d9534f;
+            text-decoration: none;
+            animation: blinkBorder 3s infinite;
+        }
+        @keyframes blinkBorder {
+            0%, 100% {
+                border: 3px solid #d9534f;
+            }
+            50% {
+                border: 1px solid #7e1916;
+            }
+        }
+        .completed-subtask {
+            border: 2px solid #5cb85c;
+            text-decoration: line-through;
+            color: #5cb85c;
+            animation: none;
+        }
+        .completed-task {
+            border: 4px solid #368f36;
+            font-weight: bold;
+            text-decoration: underline;
+            color: #368f36;
+            animation: none;
         }
     </style>
 </head>
@@ -189,12 +237,13 @@
 <table>
     <thead>
     <tr>
-        <th><h2>IS_DONE</h2></th>
-        <th><a href="/sorting/sortTasks/title">TITLE</a></th>
-        <th><a href="/sorting/sortTasks/description">DESCRIPTION</a></th>
-        <th><a href="/sorting/sortTasks/deadline">DEADLINE</a></th>
-        <th><a href="/sorting/sortTasks/priority">PRIORITY</a></th>
-        <th>Oper</th>
+        <th class="tdStat"><h2></h2></th>
+        <th class="tdAdd"><h2></h2></th>
+        <th class="tdTit"><a href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
+        <th class="tdDesc"><a href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
+        <th class="tdDead"><a href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
+        <th class="tdPrior"><a href="/sorting/sortTasks/priority">ПРИОРИТЕТ</a></th>
+        <th class="tdOper">ОПЕРАЦИИ</th>
     </tr>
     </thead>
     <script>
@@ -207,19 +256,37 @@
         }
     </script>
     <tbody>
-    <tr th:each="task : ${tasks}" th:if="${not task.is_done}"
+    <table th:each="task : ${tasks}" th:if="${not task.is_done}">
+    <tr
         th:class="${#temporals.format(task.deadline, 'yyyy-MM-dd') lt #temporals.format(#temporals.createNow(), 'yyyy-MM-dd')} ? 'overdue': ''"
         th:classappend="${#temporals.format(task.deadline.minusDays(3), 'yyyy-MM-dd') lt #temporals.format(#temporals.createNow(), 'yyyy-MM-dd')} ? 'ending-soon': ''">
-        <td><a class="oper" th:href="@{markTask/{id}(id=${task.id})}" >Выполнено</a></td>
-        <td th:text="${task.title}"></td>
-        <td th:text="${task.description}"></td>
-        <td th:text="${task.deadline}"></td>
-        <td th:text="${task.priority}"></td>
-        <td>
-            <a th:href="@{updateTask/{id}(id=${task.id})}" class = "oper">UPDATE</a>
-            <a href="#" class="oper" th:onclick="'confirmDelete(' + ${task.id} + ')'" >DELETE</a>
+        <td class="tdStat"><a class="oper" th:href="@{markTask/{id}(id=${task.id})}" >Выполнено</a></td>
+        <td class="tdAdd"><a class="oper" th:href="@{addRefTask/{id}(id=${task.id})}" >Подзадание</a></td>
+        <td th:text="${task.title}" class="tdTit"></td>
+        <td th:text="${task.description}" class="tdDesc"></td>
+        <td th:text="${task.deadline}" class="tdDead"></td>
+        <td th:text="${task.priority}" class="tdPrior"></td>
+        <td class="tdOper">
+            <a th:href="@{updateTask/{id}(id=${task.id})}" class = "oper">Изменить</a>
+            <a href="#" class="oper" th:onclick="'confirmDelete(' + ${task.id} + ')'" >Удалить</a>
         </td>
-    </tr>
+</tr>
+        <tr th:each="subTask : ${subTasks}" th:if="${subTask.ref_task == task.id}"
+            th:class="${#temporals.format(subTask.deadline.minusDays(3), 'yyyy-MM-dd') lt #temporals.format(#temporals.createNow(), 'yyyy-MM-dd')} ? 'ending-soon-subtask': ''"
+            th:classappend="${subTask.is_done} ? 'completed-subtask': ''">
+            <td></td>
+                <td style="text-align: right"><a class="oper" th:href="@{markTask/{id}(id=${subTask.id})}" >OK</a></td>
+                <td th:text="${subTask.title}"></td>
+                <td th:text="${subTask.description}"></td>
+                <td colspan="2" th:text="${subTask.deadline}"></td>
+                <td >
+                    <a th:href="@{updateTask/{id}(id=${subTask.id})}" class = "oper">Изменить</a>
+                    <a href="#" class="oper" th:onclick="'confirmDelete(' + ${subTask.id} + ')'" >Удалить</a>
+                </td>
+            </tr>
+
+
+        </table>
     </tbody>
 </table>
 
@@ -231,25 +298,39 @@
 <table>
     <thead>
     <tr>
-        <th><h2>IS_DONE</h2></th>
-        <th><a href="/sorting/sortTasks/title">TITLE</a></th>
-        <th><a href="/sorting/sortTasks/description">DESCRIPTION</a></th>
-        <th><a href="/sorting/sortTasks/deadline">DEADLINE</a></th>
-        <th><a href="/sorting/sortTasks/priority">PRIORITY</a></th>
+        <th><h2></h2></th>
+        <th><a href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
+        <th><a href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
+        <th><a href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
+        <th><a href="/sorting/sortTasks/priority">ПРИОРИТЕТ</a></th>
         <th>Oper</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="task : ${tasks}" th:if="${task.is_done}">
-        <td><a class="oper" th:href="@{markTask/{id}(id=${task.id})}" >Выполнено</a></td>
-        <td th:text="${task.title}"></td>
-        <td th:text="${task.description}"></td>
-        <td th:text="${task.deadline}"></td>
-        <td th:text="${task.priority}"></td>
-        <td>
-            <a href="#" class="oper" th:onclick="'confirmDelete(' + ${task.id} + ')'" >DELETE</a>
+    <table th:each="task : ${tasks}" th:if="${task.is_done}">
+    <tr class="completed-task">
+        <td class="tdStat"><a class="oper" th:href="@{markTask/{id}(id=${task.id})}" >Вернуть</a></td>
+        <td th:text="${task.title}" class="tdTit"></td>
+        <td th:text="${task.description}" class="tdDesc"></td>
+        <td th:text="${task.deadline}" class="tdDead"></td>
+        <td th:text="${task.priority}" class="tdPrior"></td>
+        <td class = "tdOper">
+            <a href="#" class="oper" th:onclick="'confirmDelete(' + ${task.id} + ')'" >Удалить</a>
         </td>
     </tr>
+
+        <tr th:each="subTask : ${subTasks}" th:if="${subTask.ref_task == task.id}" class="completed-subtask">
+            <td></td>
+            <td th:text="${subTask.title}"></td>
+            <td th:text="${subTask.description}"></td>
+            <td th:text="${subTask.deadline}" colspan="2"></td>
+            <td>
+                <a href="#" class="oper" th:onclick="'confirmDelete(' + ${subTask.id} + ')'" >Удалить</a>
+            </td>
+        </tr>
+
+    </table>
+
     </tbody>
 </table>
 
