--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -33,7 +33,7 @@
         }
 
         .form-input {
-            width: 100%;
+            width: 80%;
             padding: 10px;
             font-size: 16px;
             border: 1px solid #ccc;
@@ -61,7 +61,7 @@
 <div class="container">
     <h2>Registration</h2>
 
-    <form action="/saveUser" method="post">
+    <form action="/saveUser" method="post" style="padding: 20px">
         <div class="form-group">
             <label class="form-label" for="username">Username:</label>
             <input class="form-input" type="text" id="username" name="username" required/>
@@ -70,7 +70,7 @@
         <div class="form-group">
             <label class="form-label" for="password">Password:</label>
             <input class="form-input" type="password" id="password" name="password" required/>
-        </div>
+        </div><br>
 
         <input type="submit" class="button" value="Зарегистрироваться"/>
     </form>
