--- a/src/main/resources/templates/signIN.html
+++ b/src/main/resources/templates/signIN.html
@@ -33,7 +33,7 @@
         }
 
         .form-input {
-            width: 100%;
+            width: 80%;
             padding: 10px;
             font-size: 16px;
             border: 1px solid #ccc;
@@ -70,7 +70,7 @@
         <div class="form-group">
             <label class="form-label" for="password">Пароль:</label>
             <input class="form-input" type="password" id="password" name="password" required/>
-        </div>
+        </div><br>
 
         <input type="submit" class="button" value="Войти"/>
     </form>
