--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -83,7 +83,8 @@
         <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span>
         <br><br>
 
-        Email: <input class="form-input" type="email" th:field="*{email}" />
+        Email: <input class="form-input" type="email" th:field="*{email}" /><br>
+        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error-message"></span>
         <br><br>
 
         <input type="submit" class="button" value="Зарегистрироваться" />
