--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -4,7 +4,7 @@
     <title>My_Tasks_Service</title>
     <style>
         .dark-mode {
-            background-color: #333;
+            background-color: #222;
         }
         body {
             font-family: Arial, sans-serif;
@@ -39,6 +39,20 @@
             color: #555;
             font-size: 20px;
         }
+        .title-left-dark {
+            white-space: nowrap;
+            flex-grow: 20;
+            padding-left: 5%;
+            color: #aec6cc;
+            text-align: center;
+        }
+
+        .title-right-dark {
+            white-space: nowrap;
+            flex-grow: 1;
+            color: #aec6cc;
+            font-size: 20px;
+        }
 
         table {
             width: 100%;
@@ -54,10 +68,20 @@
             text-align: left;
         }
 
-
-
-        tr:nth-child(even) {
+        table tr:nth-child(even) {
             background-color: #f9f9f9;
+        }
+        table tr:nth-child(odd) {
+            background-color: #f4f4f4;
+        }
+
+        table.dark tr:nth-child(even) {
+            background-color: #aec6cc;
+            color: #222222;
+        }
+        table.dark tr:nth-child(odd) {
+            background-color: #8ba8af;
+            color: #222222;
         }
 
         a.head, a.oper{
@@ -74,12 +98,29 @@
             border: 1px solid #3498db;
             text-align: center;
         }
+        a.darkhead, a.darkoper{
+            color: #aec6cc;
+            text-decoration: none;
+            margin-right: 10px;
+            transition: color 0.3s ease-in-out;
+            cursor: pointer;
+            display: inline-block;
+            padding: 8px 4px;
+            padding-left: 6%;
+            padding-right: 6%;
+            border-radius: 4px;
+            border: 1px solid #12496e;
+            text-align: center;
+        }
 
         a:hover {
             color: #1f618d;
             background-color: #ecf0f1;
         }
-
+        a.darkhead:hover, a.darkoper:hover {
+            color: #1f618d;
+            background-color: #97b5bd;
+        }
         .action-buttons {
             display: flex;
         }
@@ -87,7 +128,7 @@
         input[type="button"] {
             background-color: #4caf50;
             color: white;
-            padding: 10px;
+            padding: 20px 60px;
             border: none;
             cursor: pointer;
             transition: background-color 0.3s ease-in-out;
@@ -107,6 +148,16 @@
             color: #fff;
             white-space: nowrap;
         }
+        header.darkhead {
+            background-color: #1f618d;
+            margin-left: -21px;
+            margin-right: -21px;
+            margin-top: -21px;
+            padding: 7px;
+            text-align: center;
+            color: #aec6cc;
+            white-space: nowrap;
+        }
 
         nav {
             display: flex;
@@ -118,6 +169,13 @@
 
         nav a.head {
             color: #fff;
+            text-decoration: none;
+            transition: color 0.3s ease-in-out;
+            border: none;
+            white-space: nowrap;
+        }
+        nav a.darkhead {
+            color: #aec6cc;
             text-decoration: none;
             transition: color 0.3s ease-in-out;
             border: none;
@@ -138,6 +196,19 @@
         tr th a:hover {
             background-color: #d6f5fc;
             color: #2d6675;
+        }
+        tr th a.dark {
+            color: #aec6cc;
+            text-decoration: none;
+            text-align: center;
+            padding: 3% 7%;
+            transition: color 0.3s ease-in-out;
+            border: none;
+            white-space: nowrap;
+        }
+        tr th a.dark:hover {
+            background-color: #2d6675;
+            color: #8ba8af;
         }
 
         nav a:hover {
@@ -232,32 +303,56 @@
             background-color: #3498db;
             color: #fff;
         }
+        th.dark{
+            background-color: #1f618d;
+            border: 1px solid #01171c;
+            color: #aec6cc;
+        }
+
+        .button-container {
+            text-align: center;
+        }
+        .addButton{
+            transition: color 0.3s ease-in-out;
+            cursor: pointer;
+            display: inline-block;
+            font-size: 18px;
+            padding: 20px 60px;
+            border-radius: 4px;
+            border: 3px solid #146014;
+            text-align: center;
+        }
+
+        table.dark tr td a{
+            color: #222222;
+            border: 1px solid #222222;
+        }
 
     </style>
 </head>
-<header>
-    <nav>
-        <a href="/task-tracker/" class = "head">На главную</a>
-        <a href="/profile" class = "head">Профиль</a>
-        <a href="/about" class = "head">О сайте</a>
-        <a href="/task-tracker/logout" class = "head">Выйти</a>
+<header th:class="${darkDesign} ? 'darkhead' : 'head'">
+    <nav th:class="${darkDesign} ? 'darkhead' : 'head'">
+        <a href="/task-tracker/" th:class="${darkDesign} ? 'darkhead' : 'head'">На главную</a>
+        <a href="/profile" th:class="${darkDesign} ? 'darkhead' : 'head'">Профиль</a>
+        <a href="/about" th:class="${darkDesign} ? 'darkhead' : 'head'">О сайте</a>
+        <a href="/task-tracker/logout" th:class="${darkDesign} ? 'darkhead' : 'head'">Выйти</a>
     </nav>
 </header>
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
 <h1 class="to_do_list">
-    <span class="title-left">Список дел</span>
-    <span class="title-right" th:text="${username}"></span>
+    <span th:class="${darkDesign} ? 'title-left-dark' : 'title-left'">Список дел</span>
+    <span th:class="${darkDesign} ? 'title-right-dark' : 'title-right'">Пользователь: <span th:class="${darkDesign} ? 'title-right-dark' : 'title-right'" th:text=" ${username}"></span></span>
 </h1>
 <table>
     <thead>
-    <tr>
-        <th class="tdStat"><h2></h2></th>
-        <th class="tdAdd"><h2></h2></th>
-        <th class="tdTit"><a href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
-        <th class="tdDesc"><a href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
-        <th class="tdDead"><a href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
-        <th class="tdPrior"><a href="/sorting/sortTasks/priority">ПРИОРИТЕТ</a></th>
-        <th class="tdOper">ОПЕРАЦИИ</th>
+    <tr th:class="${darkDesign} ? 'dark' : ''">
+        <th th:class="${darkDesign} ? 'tdStat dark' : 'tdStat'"><h2></h2></th>
+        <th th:class="${darkDesign} ? 'tdAdd dark' : 'tdAdd'"><h2></h2></th>
+        <th th:class="${darkDesign} ? 'tdTit dark' : 'tdTit'"><a href="/sorting/sortTasks/title" th:class="${darkDesign} ? 'dark' : ''">НАЗВАНИЕ</a></th>
+        <th th:class="${darkDesign} ? 'tdDesc dark' : 'tdDesc'"><a href="/sorting/sortTasks/description" th:class="${darkDesign} ? 'dark' : ''">ОПИСАНИЕ</a></th>
+        <th th:class="${darkDesign} ? 'tdDead dark' : 'tdDead'"><a href="/sorting/sortTasks/deadline" th:class="${darkDesign} ? 'dark' : ''">ДЭДЛАЙН</a></th>
+        <th th:class="${darkDesign} ? 'tdPrior dark' : 'tdPrior'"><a href="/sorting/sortTasks/priority" th:class="${darkDesign} ? 'dark' : ''">ПРИОРИТЕТ</a></th>
+        <th th:class="${darkDesign} ? 'tdOper dark' : 'tdOper'">ОПЕРАЦИИ</th>
     </tr>
     </thead>
     <script>
@@ -270,7 +365,7 @@
         }
     </script>
     <tbody>
-    <table th:each="task : ${tasks}" th:if="${not task.is_done}">
+    <table th:each="task : ${tasks}" th:if="${not task.is_done}" th:class="${darkDesign} ? 'dark' : ''">
     <tr
         th:class="${#temporals.format(task.deadline, 'yyyy-MM-dd') lt #temporals.format(#temporals.createNow(), 'yyyy-MM-dd')} ? 'overdue': ''"
         th:classappend="${#temporals.format(task.deadline.minusDays(2), 'yyyy-MM-dd') lt #temporals.format(#temporals.createNow(), 'yyyy-MM-dd')} ? 'ending-soon': ''">
@@ -304,25 +399,25 @@
     </tbody>
 </table>
 
-<input type="button" value="Добавить задание" onclick="window.location.href = 'addNewTask'"/>
+<br><div class="button-container"><input type="button" class = "addButton" value="Добавить задание" onclick="window.location.href = 'addNewTask'"/></div>
 
 <h1 class="to_do_list">
-    <span class="title-left">Выполненные задачи:</span>
+    <span th:class="${darkDesign} ? 'title-left-dark' : 'title-left'">Выполненные задачи:</span>
 </h1>
 <table>
     <thead>
-    <tr>
-        <th><h2></h2></th>
-        <th><a href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
-        <th><a href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
-        <th><a href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
-        <th><a href="/sorting/sortTasks/priority">ПРИОРИТЕТ</a></th>
-        <th>Oper</th>
+    <tr th:class="${darkDesign} ? 'dark' : ''">
+        <th th:class="${darkDesign} ? 'tdPrior dark' : 'tdPrior'"><h2></h2></th>
+        <th th:class="${darkDesign} ? 'tdTit dark' : 'tdTit'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
+        <th th:class="${darkDesign} ? 'tdDesc dark' : 'tdDesc'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
+        <th th:class="${darkDesign} ? 'tdDead dark' : 'tdDead'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
+        <th th:class="${darkDesign} ? 'tdPrior dark' : 'tdPrior'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/priority">ПРИОРИТЕТ</a></th>
+        <th th:class="${darkDesign} ? 'tdOper dark' : 'tdOper'">Операции</th>
     </tr>
     </thead>
     <tbody>
-    <table th:each="task : ${tasks}" th:if="${task.is_done}">
-    <tr class="completed-task">
+    <table th:each="task : ${tasks}" th:if="${task.is_done}" th:class="${darkDesign} ? 'dark' : ''">
+    <tr th:class="${darkDesign} ? 'completed-task dark' : 'completed-task'">
         <td class="tdStat"><a class="oper" th:href="@{markTask/{id}(id=${task.id})}" >Вернуть</a></td>
         <td th:text="${task.title}" class="tdTit"></td>
         <td th:text="${task.description}" class="tdDesc"></td>
