Dark theme is completely finished

--- a/src/main/resources/templates/about_page.html
+++ b/src/main/resources/templates/about_page.html
@@ -201,6 +201,12 @@
             line-height: 1.4;
             margin-top: 10px;
         }
+        body.dark-mode .row .block p{
+            color: #aec6cc;
+        }
+        body.dark-mode h1{
+            color: #aec6cc;
+        }
     </style>
 </head>
 <header th:class="${darkDesign} ? 'darkhead' : 'head'">
