--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -407,7 +407,7 @@
 <table>
     <thead>
     <tr th:class="${darkDesign} ? 'dark' : ''">
-        <th th:class="${darkDesign} ? 'tdPrior dark' : 'tdPrior'"><h2></h2></th>
+        <th th:class="${darkDesign} ? 'tdPrior dark' : 'tdStat'"><h2></h2></th>
         <th th:class="${darkDesign} ? 'tdTit dark' : 'tdTit'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/title">НАЗВАНИЕ</a></th>
         <th th:class="${darkDesign} ? 'tdDesc dark' : 'tdDesc'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/description">ОПИСАНИЕ</a></th>
         <th th:class="${darkDesign} ? 'tdDead dark' : 'tdDead'"><a th:class="${darkDesign} ? 'dark' : ''" href="/sorting/sortTasks/deadline">ДЭДЛАЙН</a></th>
