--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -3,6 +3,9 @@
 <head>
     <title>Админка</title>
     <style>
+        .dark-mode {
+            background-color: #222;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 21px;
@@ -11,6 +14,7 @@
             justify-content: center;
             align-items: center;
         }
+
 
         h1 {
             color: #333;
@@ -57,8 +61,20 @@
 
 
 
-        tr:nth-child(even) {
+        table tr:nth-child(even) {
             background-color: #f9f9f9;
+        }
+        table tr:nth-child(odd) {
+            background-color: #f4f4f4;
+        }
+
+        table.dark tr:nth-child(even) {
+            background-color: #aec6cc;
+            color: #222222;
+        }
+        table.dark tr:nth-child(odd) {
+            background-color: #8ba8af;
+            color: #222222;
         }
         a.head, a.oper{
             color: #3498db;
@@ -72,6 +88,20 @@
             padding-right: 6%;
             border-radius: 4px;
             border: 1px solid #3498db;
+            text-align: center;
+        }
+        a.darkhead, a.darkoper{
+            color: #aec6cc;
+            text-decoration: none;
+            margin-right: 10px;
+            transition: color 0.3s ease-in-out;
+            cursor: pointer;
+            display: inline-block;
+            padding: 8px 4px;
+            padding-left: 6%;
+            padding-right: 6%;
+            border-radius: 4px;
+            border: 1px solid #12496e;
             text-align: center;
         }
 
@@ -89,6 +119,16 @@
             padding: 7px;
             text-align: center;
             color: #fff;
+            white-space: nowrap;
+        }
+        header.darkhead {
+            background-color: #1f618d;
+            margin-left: -21px;
+            margin-right: -21px;
+            margin-top: -21px;
+            padding: 7px;
+            text-align: center;
+            color: #aec6cc;
             white-space: nowrap;
         }
 
@@ -122,6 +162,13 @@
             border: none;
             white-space: nowrap;
         }
+        nav a.darkhead {
+            color: #aec6cc;
+            text-decoration: none;
+            transition: color 0.3s ease-in-out;
+            border: none;
+            white-space: nowrap;
+        }
         tr th{
             text-align: center;
         }
@@ -134,9 +181,22 @@
             border: none;
             white-space: nowrap;
         }
+        tr th a.dark {
+            color: #aec6cc;
+            text-decoration: none;
+            text-align: center;
+            padding: 3% 7%;
+            transition: color 0.3s ease-in-out;
+            border: none;
+            white-space: nowrap;
+        }
         tr th a:hover {
             background-color: #d6f5fc;
             color: #2d6675;
+        }
+        tr th a.dark:hover {
+            background-color: #2d6675;
+            color: #8ba8af;
         }
 
         nav a:hover {
@@ -147,33 +207,46 @@
             background-color: #3498db;
             color: #fff;
         }
+        th.dark{
+            background-color: #1f618d;
+            border: 1px solid #01171c;
+            color: #aec6cc;
+        }
+        table.dark tr td a{
+            color: #222222;
+            border: 1px solid #222222;
+        }
+
+        body.dark-mode h1{
+            color: #aec6cc;
+        }
     </style>
 </head>
-<header>
-    <nav>
-        <a href="/task-tracker/" class = "head">На главную</a>
-        <a href="/profile" class = "head">Профиль</a>
-        <a href="/about" class = "head">О сайте</a>
-        <a href="/task-tracker/logout" class = "head">Выйти</a>
+<header th:class="${darkDesign} ? 'darkhead' : 'head'">
+    <nav th:class="${darkDesign} ? 'darkhead' : 'head'">
+        <a href="/task-tracker/" th:class="${darkDesign} ? 'darkhead' : 'head'">На главную</a>
+        <a href="/profile" th:class="${darkDesign} ? 'darkhead' : 'head'">Профиль</a>
+        <a href="/about" th:class="${darkDesign} ? 'darkhead' : 'head'">О сайте</a>
+        <a href="/task-tracker/logout" th:class="${darkDesign} ? 'darkhead' : 'head'">Выйти</a>
     </nav>
 </header>
+
+<body th:class="${darkDesign} ? 'dark-mode' : ''">
 <h1 class="to_do_list">
     <span class="title-left">Пользователи: </span>
 </h1>
-<body>
-
-<table>
+<table th:class="${darkDesign} ? 'dark' : ''">
     <thead>
-    <tr>
-        <th class="tdName"><a href="/sorting/sortTasks/title">Имя</a></th>
-        <th class="tdStat"><a href="/sorting/sortTasks/description">Статус</a></th>
-        <th class="tdRole"><a href="/sorting/sortTasks/deadline">Роль</a></th>
-        <th class="tdMail"><a href="/sorting/sortTasks/priority">Почта</a></th>
-        <th class="tdOper">ОПЕРАЦИИ</th>
+    <tr th:class="${darkDesign} ? 'dark' : ''">
+        <th th:class="${darkDesign} ? 'tdName dark' : 'tdName'"><a th:class="${darkDesign} ? 'dark' : ''">Имя</a></th>
+        <th th:class="${darkDesign} ? 'tdStat dark' : 'tdStat'"><a th:class="${darkDesign} ? 'dark' : ''">Статус</a></th>
+        <th th:class="${darkDesign} ? 'tdRole dark' : 'tdRole'"><a th:class="${darkDesign} ? 'dark' : ''">Роль</a></th>
+        <th th:class="${darkDesign} ? 'tdMail dark' : 'tdMail'"><a th:class="${darkDesign} ? 'dark' : ''">Почта</a></th>
+        <th th:class="${darkDesign} ? 'tdOper dark' : 'tdOper'">ОПЕРАЦИИ</th>
     </tr>
     </thead>
     <tbody>
-        <tr th:each="user : ${users}">
+        <tr th:each="user : ${users}" >
             <td th:text="${user.username}" class="tdName"></td>
             <td th:if = "${user.enabled==true}" th:text="Активен" class="tdStat"></td>
             <td th:if = "${user.enabled==false}" th:text="Заблокирован" class="tdStat"></td>
