--- a/src/main/resources/templates/edit_password.html
+++ b/src/main/resources/templates/edit_password.html
@@ -183,7 +183,7 @@
 
     PASSWORD <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
     NEW PASSWORD <input type="text" id="newPassword" name="newPassword"><br><br>
-    <span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль меньше 6 символов</span><br><br>
+    <span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль меньше 6 символов</span><br>
     <input type="submit" value="СОХРАНИТЬ"/>
 </form>
 
