--- a/src/main/resources/templates/forgotPasswordView.html
+++ b/src/main/resources/templates/forgotPasswordView.html
@@ -13,6 +13,38 @@
             justify-content: center;
             height: 100vh;
         }
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            margin-top: 40px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+
+        input[type="submit"] {
+            background-color: #4caf50;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
 
         .container {
             text-align: center;
@@ -32,19 +64,6 @@
             color: #666;
         }
 
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            border-radius: 5px;
-            background-color: #3498db;
-            color: #fff;
-            border: 2px solid #3498db;
-            transition: background-color 0.3s ease;
-        }
     </style>
     <title>Forgot Password</title>
 </head>
@@ -58,10 +77,13 @@
     </div>
 
     <div class="comfort">
-        <p>Мы все забываем время от времени. Нажмите кнопку ниже, и все будет в порядке.</p>
+        <p>Мы все забываем время от времени. Введите свою почту ниже и нажмите кнопку, что восстановить ваши данные...</p>
     </div>
 
-    <a href="/" class="button">Понятно</a>
+    <form action="/sendEmail" method="post" th:class="${darkDesign} ? 'dark' : ''">
+        EMAIL <input type="text" id="email" name="email"><br><br>
+        <input type="submit" value="Отправить письмо"/><br><br>
+    </form>
 </div>
 
 </body>
